<?xml version="1.0"?>
<package>
  <name>world_manager_simple</name>
  <version>1.0.0</version>
  <description>  
    Code to keep track of poses of objects detected by recognition system and to 
    add them to the moveit planning scene
  </description>


  <maintainer email="jvarley@cs.columbia.edu">Jake Varley</maintainer>

  <author>Jake</author>
  <license>BSD</license>
  <url>https://github.com/CURG/world_manager_simple.git</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
 
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>

