<?xml version="1.0"?>
<package>
  <name>world_manager</name>
  <version>2.0.0</version>
  <description>  
    Code for interfacing with Movit planning scene and object TFs
  </description>


  <maintainer email="jvarley@cs.columbia.edu">Jake Varley</maintainer>

  <author>Jake</author>
  <license>BSD</license>
  <url>https://github.com/CURG/world_manager.git</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
 
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>

